# ECE229-Group6

./: .buildinfo  Description.html  README.md  app.html  app.py  cleaned_book_data.csv  ece 229 data cleaning.ipynb  genindex.html  index.html  model.py  model2.ipynb  model_1_test.html  model_Summary.py  model_Summary_preprocessing.py  model_for_Summary_Similarity.py  model_slim.py  model_test.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: Description.doctree  app.doctree  environment.pickle  index.doctree  model_1_test.doctree  model_test.doctree
.doctrees/api/: index.doctree  model.doctree  model_1.doctree
.github/workflows/: deploy.yml
FlaskApp/: README.md  app.py  model.py  model_1.py
_modules/: index.html
_modules/book_recommender/: model.html  model_1.html
_sources/: Description.ipynb.txt  app.ipynb.txt  index.md.txt  model_1_test.ipynb.txt
_sources/api/: model.rst.txt
api/: index.html  model.html  model_1.html
book-recommender/: README.md  tasks.py
book-recommender/doc/: _conf.py  conf.py  model_test.ipynb
book-recommender/doc/api/: app_flask.rst  index.rst  model_1.rst
book-recommender/doc/src/: __init__.py  mynb_conf.py  myst_conf.py  other.py  platform.py
book-recommender/src/book_recommender/: __init__.py  app_flask.py  model.py
src/book_recommender/: app_flask.py  model_1.py
