[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.4,<4"]

[project]
authors = [{name = "Conghao Liu", email = "col005@ucsd.edu"}]
classifiers = ["License :: OSI Approved :: Apache Software License"]
dynamic = ["version", "description"]
license = {file = "LICENSE"}
name = "book-recommender"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
  "scikit-learn",
  "flask",
  "flask_httpauth",
  "werkzeug",
  "nltk",
  "pandas",
  "matplotlib"
]

maintainers = [
  {name = "Conghao Liu", email = "col005@ucsd.edu"},
]

[project.urls]
Home = "https://github.com/williamliuzhenwei/ECE229-Group6"

[project.optional-dependencies]
doc = [
  "sphinx==4.5",
  "invoke",
  "d2py",
  "xyzstyle",
  "sphinx-book-theme",
  "myst-nb",
  "sphinx-thebe",
  "sphinx-copybutton",
  "sphinx-comments",
  "plotly",
  "sphinxcontrib-mermaid",
  "sphinx-design",
  "sphinx-inline-tabs",
  "sphinx-automodapi",
  "sphinxcontrib-bibtex"
]

[tool.flit.module]
name = "book_recommender"

[tool.flit.sdist]
# include = ["docs/"]
exclude = ['doc', '.git', '.github', 'output']
